--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,9 @@
 
   <title>
     {%- if page.title -%}
-      {{ page.title }}
+      <a href="/">{{ page.title }}</a>
     {%- else -%}
-      {{ site.title }}
+      <a href="/">{{ site.title }}</a>
     {%- endif -%}
   </title>
 
