--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,8 @@
   <body a="{{ site.theme_config.appearance | default: "auto" }}">
     <main class="page-content" aria-label="Content">
       <div class="w">
+        <h1><a href="/" class="title">{{ site.title }}</a></h1>
+
         {{ content }}
       </div>
     </main>
