--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{%-include back_link.html-%}
+<a href="/blog" class="back">← Back to blog</a>
 
 <article>
   <p class="post-meta">
